@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c0e856045c5c473d846a27be40efc2dff943acbb ChangeLog
+SHA1 96e1557aa6d62346e0b5ba895016a76db692950b ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 c3235a2e607845a9cf00a45ec371a3411a551cd1 META.yml
-SHA1 347bc1eb033e818d3bc0c9f870f2198793125c1e Makefile.PL
+SHA1 84bb21ea4e0aef02847f19bb5b434bdf48ffef83 META.yml
+SHA1 c606de73014486f22b9eb4ce800cccaf36abdebf Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 49d72af20f60c9a56a30e713f90e3e4b81a17f31 lib/Net/FullAuto.pm
+SHA1 379a883c03a37103b82840c54b640cbe8bc66014 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -41,13 +41,13 @@ SHA1 9783a046faea98fe0ba53f6397a4e264c06e6db8 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 0fa60c2ccca0f609c1b13d22b5e84d45e1934c47 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 15e1ceb275d7f2097fbb544ca104b1928b3869a5 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 6a2d8ed8dfce8911f59664197b3c5febbd5de349 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 9c76379523d6b45aa569de85a24c1df266755e68 lib/Net/FullAuto/FA_Core.pm
+SHA1 4d5e52b827748a86d7707fa162dcbc171c6e7686 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkyvWCkACgkQdsVAdUjO9IlfEACfcctd/SY6tLOfjMI6VbNlRCVo
-ibwAoI3UCf0zYGm8V2KjvvyEqBEsfJ9G
-=ZHKu
+iEYEARECAAYFAkyzmN4ACgkQdsVAdUjO9IktywCeJYyJEBtxI+mBkNZb1rMOpu2B
+Qx4An0Tl/THD09GvOD2D3B/AOe7ERPd2
+=R5Pf
 -----END PGP SIGNATURE-----
